generate relics drop for new prime posts

--- a/primes-generator/vaulted/template.pug
+++ b/primes-generator/vaulted/template.pug
@@ -7,9 +7,10 @@ p Now, if you've joined fairly recently there's a pretty good chance you have ne
 h2 How To Get #{primedItem} Prime
 p So, first things first, check the presence of the following relics in your Void Relic Refinement:
 ul
-	each val, index in itemPartsToRelics
-		- var relics = '<b>' + val.join(', ') + '</b>' + ' that drop ' + index;
-		li !{relics}
+	each relics, itemPart in itemPartsToRelics
+		- var thatDrop = relics.length === 1 ? ' that drops ' : ' that drop ';
+		- var relicsList = '<b>' + relics.join(', ') + '</b>' + thatDrop + itemPart;
+		li !{relicsList}
 
 p If you don't have any of them then either you could buy #{primedItem} Prime relics from other players or wait until the #{primedItem} Prime eventually returns when the Prime vault opens again.
 
