--- a/primes-generator/new/template.pug
+++ b/primes-generator/new/template.pug
@@ -12,4 +12,31 @@ ul
 h2 #{primedItem} Prime Relics Farming
 p Before we proceed any further, I would like to say that all spots that I'll share with you are based on my personal experience <strong>farming #{primedItem} Prime relics</strong>. The spots gave me the necessary relics at the shortest time, but you may have a different result as relic drops are also based on a chance. Now, let's get on to the <strong>how to farm #{primedItem} Prime relics</strong> fast and easy.
 
+- var mentionedEras = {};
+each object, index  in unitedItemPartsByRelicEras
+	- var parts = 's'
+	- var title = `How To Get ${object.parts.join(' & ')} Relics`;
+	h3 #{title}
+	each era, num in object.eras
+		- var relics = object.relics[era].join(' / ');
+		if !mentionedEras[era]
+			if era === 'Lith'
+				p For #[strong farming #{relics} Relics] the #[b Orokin Derelict Defense] mission is a great option. ODD is a straightforward defense mission that you can even solo with Banshee and you should be able to get two Lith relics in 10 waves most of the time.
+			else if era === 'Meso'
+				p In order to farm #[b #{relics} Relics], I would recommend #[b IO on Jupiter]. This mission can be completed really quickly and with some luck, you should be able to get two Meso relics in 10 waves.
+			else if era === 'Neo'
+				p For #[b #{relics} Relics], my recommendation is #[b Hydron on Sedna]. It is the fastest way to farm for Neo relics because Neo relics drop every 5 rounds. Also, it worth mentioned that Hydron is the best area to level up your Warframe and weapons. So, don't forget to bring alongside your weapons that you want to level up.
+			else if era === 'Axi'
+				p For #[b #{relics} Relics farming] I would recommend #[b Xini on Eris]. It's an interception mission that's pretty straightforward. The first two rounds drop Neo relics and rounds 3 and 4 regularly dropping Axi relics. Optimally you want to stay four rounds before extracting.
+				p Xini also has a high Neurodes drop, so be sure to keep an eye for [Neurodes](/warframe-neurodes-farming/ "Warframe Neurodes Farming").
+		else
+			- var section = mentionedEras[era];
+			if num === 0
+				p You can get it by opening #[b #{relics} Relics]. To farm these relics, I suggest you go to the same mission which I've already mentioned in _"#{section}"_ section.
+			else
+				p Besides that, you can get it by opening #[b #{relics} Relics]. To farm these relics, I suggest you go to the same mission which I've already mentioned in _"#{section}" section_.	
+		- mentionedEras[era] = title
+
+p Finally, relic packs always a decent way to get your hands on those new #{primedItem} Prime relics.
+
 p And that’s pretty much all I want to say about #[strong #{primedItem} Prime Relics farming]. I hope this guide helped and good luck with farming. Bye-bye.
