--- a/data-updater/tasks/generate-prime-posts/unvaulted/template.pug
+++ b/data-updater/tasks/generate-prime-posts/unvaulted/template.pug
@@ -1,4 +1,4 @@
-p Hey guys. And the #[strong #{primedItem} Prime] along with #{alongWith[0]} Prime and #{alongWith[1]} Prime have arrived in Warframe. Today I'll be showing you which relics you'll need to farm to get #{primedItem} Prime and where you can farm these relics. 
+p Hey guys. And the #[strong #{primedItem} Prime] #{utils.generateAlongWith(alongWith)} have emerged from the Prime Vault. Today I'll be showing you which relics you'll need to farm to get #{primedItem} Prime and where you can farm these relics. 
 <!--more-->
 
 h2 #{primedItem} Prime Relics
@@ -9,8 +9,10 @@ ul
 		- var relicsList = '<b>' + relics.join(', ') + '</b>' + thatDrop + itemPart;
 		li !{relicsList}
 
+- var isOnlyVoid = true;
 h2 #{primedItem} Prime Relics Farming
-p Before we proceed any further, I would like to say that all spots that I'll share with you are based on my personal experience <strong>farming #{primedItem} Prime relics</strong>. The spots gave me the necessary relics at the shortest time, but you may have a different result as relic drops are also based on a chance. Now, let's get on to the <strong>how to farm #{primedItem} Prime relics</strong> fast and easy.
+if(!isOnlyVoid)
+	p Before we proceed any further, I would like to say that all spots that I'll share with you are based on my personal experience <strong>farming #{primedItem} Prime relics</strong>. The spots gave me the necessary relics at the shortest time, but you may have a different result as relic drops are also based on a chance. Now, let's get on to the <strong>how to farm #{primedItem} Prime relics</strong> fast and easy.
 
 - var mentionedEras = {};
 each object, index  in unitedItemPartsByRelicEras
@@ -20,13 +22,25 @@ each object, index  in unitedItemPartsByRelicEras
 		- var relics = object.relics[era].join(' / ');
 		if !mentionedEras[era]
 			if era === 'Lith'
-				p For #[strong farming #{relics} Relics] the #[b Orokin Derelict Defense] mission is a great option. ODD is a straightforward defense mission that you can even solo with Banshee and you should be able to get two Lith relics in 10 waves most of the time.
+				if(isOnlyVoid)
+					p For #[strong farming #{relics} Relics] the #[b Heppit] mission in the Void is a great option. It's a quick capture mission which you can repeat pretty quickly.
+				else 
+					p For #[strong farming #{relics} Relics] the #[b Orokin Derelict Defense] mission is a great option. ODD is a straightforward defense mission that you can even solo with Banshee and you should be able to get two Lith relics in 10 waves most of the time.
 			else if era === 'Meso'
-				p In order to farm #[b #{relics} Relics], I would recommend #[b IO on Jupiter]. This mission can be completed really quickly and with some luck, you should be able to get two Meso relics in 10 waves.
+				if(isOnlyVoid)
+					p In order to farm #[b #{relics} Relics], I would recommend #[b Ukko] in the Void. It's a capture and can be completed really quickly.
+				else
+					p In order to farm #[b #{relics} Relics], I would recommend #[b IO on Jupiter]. This mission can be completed really quickly and with some luck, you should be able to get two Meso relics in 10 waves.
 			else if era === 'Neo'
-				p For #[b #{relics} Relics], my recommendation is #[b Hydron on Sedna]. It is the fastest way to farm for Neo relics because Neo relics drop every 5 rounds. Also, it worth mentioned that Hydron is the best area to level up your Warframe and weapons. So, don't forget to bring alongside your weapons that you want to level up.
+				if(isOnlyVoid)
+					p For #[b #{relics} Relics], my recommendation is #[b Belenus] in the Void. Belenus is a straightforward defense mission best attempted with a team and you should be able to get two Neo relics in 10 waves most of the time(or one Meso and one Neo).
+				else
+					p For #[b #{relics} Relics], my recommendation is #[b Hydron on Sedna]. It is the fastest way to farm for Neo relics because Neo relics drop every 5 rounds. Also, it worth mentioned that Hydron is the best area to level up your Warframe and weapons. So, don't forget to bring alongside your weapons that you want to level up.
 			else if era === 'Axi'
-				p For #[b #{relics} Relics farming] I would recommend #[b Xini on Eris]. It's an interception mission that's pretty straightforward. The first two rounds drop Neo relics and rounds 3 and 4 regularly dropping Axi relics. Optimally you want to stay four rounds before extracting.
+				if(isOnlyVoid)
+					p You can obtain #[b #{relics} Relics] from Aten - a mobile defense mission or Marduk - a sabotage mission. Both of them have a chance to drop a Neo relic as well.
+				else
+					p For #[b #{relics} Relics farming] I would recommend #[b Xini on Eris]. It's an interception mission that's pretty straightforward. The first two rounds drop Neo relics and rounds 3 and 4 regularly dropping Axi relics. Optimally you want to stay four rounds before extracting.
 				p Xini also has a high Neurodes drop, so be sure to keep an eye for [Neurodes](/warframe-neurodes-farming/ "Warframe Neurodes Farming").
 		else
 			- var section = mentionedEras[era];
